--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  provider: ^6.0.5
+  intl: ^0.18.1
+  auto_direction: ^0.0.7
 
 
 
